JBTM-3588 wip migration from arquillian to paxExam